# music-matcher

./: .appveyor.yml  .gitignore  DOCKER_USER  Dockerfile  README.md  iv.yaml  pyproject.toml  tasks.py
.github/workflows/: build_container.yaml  unit_tests.yaml
data/: music_genres.yaml
docs/: cicd_notes.md  development_decisions.md  development_notes.md  infrastructure_decisions.md  users.md
music/: song.py  spotify_client.py
music_matcher/: music_history.py  recommendation_engine.py  song.py  user.py
music_matcher/data/: music_genres.yaml
music_matcher/tests/: conftest.py  test_music_history.py  test_recommendation_engine.py  test_song.py  test_user.py
music_matcher/tests/data/: wrong_genres.yaml
user_information/: music_history.py  profile.py
