[tool.poetry]
name = "music-matcher"
version = "v0.3.0"
description = "Connect with people based on your music tastes."
authors = ["gonzz <gonzalo.abril@wazuh.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.9 <3.11"
invoke = "^1.6.0"
pylint = "^2.11.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
assertpy = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
